:bug: Fix vertical alignment of several elements in Wallet

--- a/src/components/wallet/walletDetails.css
+++ b/src/components/wallet/walletDetails.css
@@ -29,4 +29,8 @@
     word-break: break-all;
     margin-bottom: -4px;
   }
+
+  & .copyIcon {
+    vertical-align: -2px;
+  }
 }
